# pharma_fastAPI

./: .env  .gitignore  DEMO_GUIDE.md  README.md  docker-compose.yml  pharma_apis.postman_collection.json  prometheus_grafana_verification.py
.github/workflows/: build-and-push.yml
auth_service/: .env  Dockerfile  pyproject.toml  requirements.txt
auth_service/app/: db.py  demo.txt  jwt_utils.py  main.py  models.py  schemas.py
auth_service/app/keys/: public.pem
auth_service/app/routers/: auth.py  users.py
catalog_service/: .env  Dockerfile  catalog.db  pyproject.toml  requirements.txt
catalog_service/app/: db.py  main.py  models.py  schemas.py
catalog_service/app/routers/: drugs.py
gateway/: .env  Dockerfile  pyproject.toml  requirements.txt
gateway/app/: main.py
gateway/app/routes/: proxy.py
inventory_service/: .env  Dockerfile  pyproject.toml  requirements.txt
inventory_service/app/: catalog_client.py  db.py  main.py  models.py  redis_client.py  schemas.py
inventory_service/app/routers/: inventory.py
kong/: Dockerfile  kong.aws.yml  kong.yml
nginx/: nginx.conf
orders_service/: .env  Dockerfile  pyproject.toml  requirements.txt
orders_service/app/: db.py  main.py  models.py  redis_client.py  schemas.py
orders_service/app/observability/: logging.py  metrics.py
orders_service/app/routers/: orders.py
orders_service/app/services/: inventory_client.py
orders_service/app/tests/: test_inventory_breaker.py
prometheus/: prometheus.yml
shared/: Dockerfile  pyproject.toml  requirements.txt
shared/shared/: auth_utils.py
shared/shared/keys/: private.pem
tests/demo/: pharma_demo.postman_collection.json
