[tool.poetry]
name = "orders-service"
version = "0.1.0"
description = ""
authors = ["Tani <vtvarma2012@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.121.2,<0.122.0"
uvicorn = ">=0.38.0,<0.39.0"
requests = ">=2.32.5,<3.0.0"
python-jose = { version=">=3.5.0,<4.0.0", extras=["cryptography"] }
shared = {path = "../shared"}
python-dotenv = "^1.2.1"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
httpx = "^0.28.1"
pybreaker = "^1.4.1"
redis = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
